fix: 공백 입력 시에 0 출력 되도록 수정